[project]
name = "llm-live-chat"
version = "0.0.1"
description = "Use LLM to chat in your terminal and receive async responses"
readme = "README.md"
authors = [{name = "Josh Albrecht"}]
license = "Apache-2.0"
requires-python = ">=3.9"
classifiers = []
dependencies = [
    "llm",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/imbue-ai/llm-live-chat"

[project.entry-points.llm]
live-chat = "llm_live_chat"

[project.optional-dependencies]
test = ["pytest"]
